--- a/common_services/exportmanager_ear/src/test/resources/log4j.properties
+++ b/common_services/exportmanager_ear/src/test/resources/log4j.properties
@@ -24,17 +24,17 @@
 # All rights reserved. Use is subject to license terms.
 
 # Set root category priority to ERROR and set no appender
-log4j.rootLogger=INFO, MyConsoleAppender
+log4j.rootLogger=DEBUG
 
 log4j.logger.test=DEBUG, MyConsoleAppender
-log4j.additivity.test=false
-log4j.logger.de.mpg.escidoc=INFO, MyConsoleAppender
-log4j.additivity.de.mpg.escidoc=false
+log4j.logger.de.mpg.escidoc=INFO,MyConsoleAppender
+log4j.logger.org.apache=INFO,MyConsoleAppender
+log4j.logger.httpclient=INFO,MyConsoleAppender
 
+# MyConsoleAppender is set to be a ConsoleAppender (writes to system console).
 log4j.appender.MyConsoleAppender=org.apache.log4j.ConsoleAppender
-log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
 
-log4j.appender.MyFileAppender=org.apache.log4j.FileAppender
-log4j.appender.MyFileAppender.layout=org.apache.log4j.PatternLayout
-log4j.appender.MyFileAppender.File=test/testsimplesearch/test.log
+# MyConsoleAppender uses PatternLayout.
+log4j.appender.MyConsoleAppender.layout=org.apache.log4j.PatternLayout
+#log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-4r [%t] %-5p %c %x - %m%n
+log4j.appender.MyConsoleAppender.layout.ConversionPattern=%-5p %m%n
