--- a/common_services/exportmanager_ear/src/test/resources/pubman.properties
+++ b/common_services/exportmanager_ear/src/test/resources/pubman.properties
@@ -1,6 +1,8 @@
-
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
+
+# URL of the FIZ framework login
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
 
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
@@ -16,15 +18,3 @@ escidoc.pubman_presentation.email.authenticationpwd=${escidoc.pubman_presentatio
 escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
 framework.admin.username=${framework.admin.username}
 framework.admin.password=${framework.admin.password}
-
-framework.librarian.username=${framework.librarian.username}
-framework.librarian.password=${framework.librarian.password}
-
-framework.author.username=${framework.author.username}
-framework.author.password=${framework.author.password}
-
-framework.editor.username=${framework.editor.username}
-framework.editor.password=${framework.editor.password}
-
-framework.scientist.username=${framework.scientist.username}
-framework.scientist.password=${framework.scientist.password}
