--- a/common_services/exportmanager_ear/src/main/resources/common.properties
+++ b/common_services/exportmanager_ear/src/main/resources/common.properties
@@ -1,6 +1,29 @@
-
 # URL of the FIZ framework instance
 escidoc.framework_access.framework.url=${escidoc.framework_access.framework.url}
 
+# URL of the FIZ framework login
+escidoc.framework_access.login.url=${escidoc.framework_access.login.url}
+
 # Identifier of the content type "publication" in the actual framework instance
 escidoc.framework_access.content-model.id.publication=${escidoc.framework_access.content-model.id.publication}
+
+# E-Mail settings
+escidoc.pubman_presentation.email.mailservername=${escidoc.pubman_presentation.email.mailservername}
+escidoc.pubman_presentation.email.sender=${escidoc.pubman_presentation.email.sender}
+escidoc.pubman_presentation.email.withauthentication=${escidoc.pubman_presentation.email.withauthentication}
+escidoc.pubman_presentation.email.authenticationuser=${escidoc.pubman_presentation.email.authenticationuser}
+escidoc.pubman_presentation.email.authenticationpwd=${escidoc.pubman_presentation.email.authenticationpwd}
+
+# eSciDoc-ObjId of the external Organisation
+escidoc.pubman.external.organisation.id=${escidoc.pubman.external.organisation.id}
+
+framework.admin.username=${framework.admin.username}
+framework.admin.password=${framework.admin.password}
+
+#NS props
+xsd.soap.item.components=${xsd.soap.item.components}
+xsd.soap.common.mdrecords=${xsd.soap.common.mdrecords}
+xsd.metadata.file=${xsd.metadata.file}
+xsd.metadata.dcterms=${xsd.metadata.dcterms}
+xsd.metadata.dc=${xsd.metadata.dc}
+xsd.soap.common.prop=${xsd.soap.common.prop}
