--- a/common_services/exportmanager_ear/pom.xml
+++ b/common_services/exportmanager_ear/pom.xml
@@ -2,7 +2,7 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.36-SNAPSHOT</version>
+		<version>1.0.45-SNAPSHOT</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
@@ -89,6 +89,23 @@
 							<groupId>de.mpg.escidoc.services</groupId>
 							<artifactId>citationmanager</artifactId>
 						</ejbModule>
+					 	<ejbModule>
+							<groupId>de.mpg.escidoc.services</groupId>
+							<artifactId>transformation</artifactId>
+						</ejbModule>
+                        <jarModule>
+                            <groupId>org.apache.xmlbeans</groupId>
+                            <artifactId>xmlbeans</artifactId>
+                            <includeInApplicationXml>
+                                true
+                            </includeInApplicationXml>
+                        </jarModule>
+                        <jarModule>
+                            <groupId>xmlbeans</groupId>
+                            <artifactId>transformation</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>
+						
 						<jarModule>
 							<groupId>javabib</groupId> 
 							<artifactId>javabib</artifactId>
@@ -103,6 +120,16 @@
 								true
 							</includeInApplicationXml>
 						</jarModule>
+						<jarModule>
+							<groupId>com.maxmind.geoip</groupId>
+							<artifactId>geoip</artifactId>
+							<includeInApplicationXml>true</includeInApplicationXml>
+						</jarModule>
+                        <jarModule>
+                            <groupId>external</groupId>
+                            <artifactId>scannotation</artifactId>
+                            <includeInApplicationXml>true</includeInApplicationXml>
+                        </jarModule>						
 					</modules>
 				</configuration>
 			</plugin>
@@ -252,41 +279,54 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.37-SNAPSHOT</version>
+			<version>1.0.48-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>exportmanager</artifactId>
-			<version>1.0.34-SNAPSHOT</version>
 			<scope>compile</scope>
+			<version>1.0.45-SNAPSHOT</version>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>structuredexportmanager</artifactId>
-			<version>1.0.37-SNAPSHOT</version>
 			<scope>compile</scope>
+			<version>1.0.48-SNAPSHOT</version>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>citationmanager</artifactId>
-			<version>1.0.40-SNAPSHOT</version>
 			<scope>compile</scope>
+			<version>1.0.50-SNAPSHOT</version>
 			<type>ejb</type>
 		</dependency>
-				<dependency>
+       <dependency>
+            <groupId>de.mpg.escidoc.services</groupId>
+            <artifactId>transformation</artifactId>
+            <version>1.0.33-SNAPSHOT</version>
+            <scope>compile</scope>
+            <type>ejb</type>
+        </dependency>	
+        <dependency>
+            <groupId>xmlbeans</groupId>
+            <artifactId>transformation</artifactId>
+            <version>1.0.0</version>
+            <scope>compile</scope>
+        </dependency>
+		<dependency>
 			<groupId>jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
-			<version>2.0.1-patched</version>
+			<version>3.5.0</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.34-SNAPSHOT</version>
 			<scope>compile</scope>
+			<version>1.1.45-SNAPSHOT</version>
 			<type>ejb</type>
 		</dependency>
 		<dependency>
@@ -345,6 +385,12 @@
 			<groupId>org.apache.ant</groupId>
 			<artifactId>ant</artifactId>
 			<version>1.7.0</version>
-		</dependency>
+		</dependency> 
+        <dependency>
+            <groupId>external</groupId>
+            <artifactId>scannotation</artifactId>
+            <version>1.0.2</version>
+            <scope>compile</scope>
+        </dependency>		
 	</dependencies>
 </project>
