--- a/common_services/validation/pom.xml
+++ b/common_services/validation/pom.xml
@@ -31,19 +31,19 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.46-SNAPSHOT</version>
+		<version>1.0.46</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>validation</artifactId>
 	<name>validation</name>
 	<packaging>ejb</packaging>
-	<version>1.0.52-SNAPSHOT</version>
+	<version>1.0.52</version>
 
 	<scm>
-		<connection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/validation</connection>
-		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/trunk/common_services/validation</developerConnection>
-		<url>https://zim02.gwdg.de/repos/common/</url>
+		<connection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.46</connection>
+		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/common/tags/common_services-1.0.46</developerConnection>
+		<url>https://zim02.gwdg.de/repos/common/tags/common_services-1.0.46</url>
 	</scm>
 
 	<build>
@@ -101,7 +101,7 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.46-SNAPSHOT</version>
+			<version>1.1.46</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
