--- a/common_services/foxml_migration/src/main/resources/log4j.properties
+++ b/common_services/foxml_migration/src/main/resources/log4j.properties
@@ -18,7 +18,7 @@
 #
 # CDDL HEADER END
 #
-# Copyright 2006-2010 Fachinformationszentrum Karlsruhe Gesellschaft
+# Copyright 2006-2007 Fachinformationszentrum Karlsruhe Gesellschaft
 # für wissenschaftlich-technische Information mbH and Max-Planck-
 # Gesellschaft zur Förderung der Wissenschaft e.V.
 # All rights reserved. Use is subject to license terms.
@@ -27,6 +27,7 @@
 log4j.rootLogger=INFO
 log4j.logger.migration=INHERIT, FILE
 log4j.logger.pidreplacement=INHERIT, PID
+log4j.logger.propchange=INHERIT, PROP
 log4j.logger.de.mpg.mpdl.migration=INFO, CONSOLE
 log4j.additivity.de.mpg.mpdl.migration=false
 
@@ -41,6 +42,12 @@ log4j.appender.PID.layout=org.apache.log4j.PatternLayout
 log4j.appender.PID.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.PID.File=pidreplacement.log
 log4j.logger.PID.additivity=false
+
+log4j.appender.PROP=org.apache.log4j.FileAppender
+log4j.appender.PROP.layout=org.apache.log4j.PatternLayout
+log4j.appender.PROP.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
+log4j.appender.PROP.File=propchange.log
+log4j.logger.PROP.additivity=false
 
 log4j.appender.CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CONSOLE.layout=org.apache.log4j.PatternLayout
