--- a/common_services/pid_cache_ear/pom.xml
+++ b/common_services/pid_cache_ear/pom.xml
@@ -31,14 +31,14 @@
 	<parent>
 		<artifactId>common_services</artifactId>
 		<groupId>de.mpg.escidoc.services</groupId>
-		<version>1.0.47-SNAPSHOT</version>
+		<version>1.0.47</version>
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>de.mpg.escidoc.services</groupId>
 	<artifactId>pid_cache_ear</artifactId>
 	<packaging>ear</packaging>
 	<name>pid_cache_ear</name>
-	<version>0.1.10-SNAPSHOT</version>
+	<version>0.1.10</version>
 	<build>
 		<plugins>
 			<plugin>
@@ -244,20 +244,20 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.50-SNAPSHOT</version>
+			<version>1.0.50</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>pid_cache_presentation</artifactId>
-			<version>0.1.10-SNAPSHOT</version>
+			<version>0.1.10</version>
 			<type>war</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.47-SNAPSHOT</version>
+			<version>1.1.47</version>
 			<type>ejb</type>
 			<scope>compile</scope>
 		</dependency>
