Adaptions for new FW
Former-commit-id: 22c283de28672bba1719d192e9838282d2990be4

--- a/pubman/pubman_installer/src/main/resources/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/pubman.properties
@@ -104,8 +104,8 @@ escidoc.cone.mulgara.server.name=${escidoc.cone.mulgara.server.name}
 escidoc.cone.mulgara.server.port=${escidoc.cone.mulgara.server.port}
 
 # unAPI server
-escidoc.unapi.download.server=${escidoc.unapi.download.server}
-escidoc.unapi.view.server=${escidoc.unapi.view.server}
+escidoc.unapi.download.server=
+escidoc.unapi.view.server=
 
 # CoNE default language abbreviation
 escidoc.cone.language.default=${escidoc.cone.language.default}
@@ -132,7 +132,7 @@ escidoc.import.database.name=${escidoc.import.database.name}
 escidoc.import.database.user.name=${escidoc.import.database.user.name}
 escidoc.import.database.user.password=
 escidoc.import.database.connection.url=${escidoc.import.database.connection.url}
-escidoc.import.task.content-model=${escidoc.import.task.content-model}
+escidoc.import.task.content-model=
 
 escidoc.import.surveyor.interval=${escidoc.import.surveyor.interval}
 
@@ -181,12 +181,12 @@ escidoc.pubman.statistics.nims.context.ids =${escidoc.pubman.statistics.nims.con
 escidoc.pubman.favicon.apply=${escidoc.pubman.favicon.apply}
 escidoc.pubman.favicon.url=${escidoc.pubman.favicon.url}
 
-<!-- version of the pubman cookie (has to be changed if style information is changed)-->
+# version of the pubman cookie (has to be changed if style information is changed)
 escidoc.pubman.cookie.version=${escidoc.pubman.cookie.version}
 
 escidoc.cone.subjectVocab=${escidoc.cone.subjectVocab}
                                                                     
-<!-- PID cache -->
+# PID cache
 escidoc.pidcache.cache.size.max=${escidoc.pidcache.cache.size.max}
 escidoc.pidcache.refresh.interval=${escidoc.pidcache.refresh.interval}
 escidoc.pidcache.dummy.url=${escidoc.pidcache.dummy.url}
