--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -37,24 +37,17 @@
 	<name>pubman_installer</name>
 	<packaging>jar</packaging>
 	<version>6.1.9-SNAPSHOT</version>
-
+	
 	<scm>
 		<connection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_installer</connection>
 		<developerConnection>scm:svn:https://zim02.gwdg.de/repos/pubman/trunk/pubman/pubman_installer</developerConnection>
 		<url>https://zim02.gwdg.de/repos/pubman/</url>
 	</scm>
-
+	
 	<build>
 		<defaultGoal>package</defaultGoal>
 		<finalName>${project.artifactId}</finalName>
 		<resources>
-			<resource>
-				<directory>src/izpack</directory>
-				<includes>
-					<include>Info.html</include>
-				</includes>
-				<filtering>true</filtering>
-			</resource>
 			<resource>
 				<directory>src/main/resources</directory>
 				<filtering>true</filtering>
@@ -95,6 +88,29 @@
             <!--                </executions>-->
             <!--            </plugin>-->
             <!--  copy other checked resource into staging area, expected by install.xml -->
+			<plugin>
+				<artifactId>maven-resources-plugin</artifactId>
+				<executions>
+					<execution>
+						<id>copy-resources</id>
+            			<!-- here the phase you need -->
+						<phase>validate</phase>
+						<goals>
+							<goal>copy-resources</goal>
+						</goals>
+						<configuration>
+							<outputDirectory>${staging.dir}</outputDirectory>
+							<resources>
+								<resource>
+									<directory>src/main/resources/izpack</directory>
+									<filtering>true</filtering>
+								</resource>
+							</resources>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+			
 			<plugin>
 				<artifactId>maven-antrun-plugin</artifactId>
 				<version>1.1</version>
@@ -191,12 +207,12 @@
 			</plugin>
 		</plugins>
 	</build>
-
+	
 	<properties>
 		<staging.dir>${project.build.directory}/staging</staging.dir>
 		<izpack-standalone.version>4.3.0</izpack-standalone.version>
 	</properties>
-
+	
 	<dependencies>
 		<dependency>
 			<groupId>de.mpg.escidoc.pubman</groupId>
@@ -246,6 +262,6 @@
 			<version>1.1.46</version>
 			<scope>compile</scope>
 		</dependency>
-
+	
 	</dependencies>
 </project>
