--- a/pubman/pubman_installer/src/main/resources/pubman.properties
+++ b/pubman/pubman_installer/src/main/resources/pubman.properties
@@ -207,3 +207,11 @@ escidoc.pidcache.user.password=
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
 
 escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
+
+# searchAndExport service 
+escidoc.search.and.export.default.sql.query=${escidoc.search.and.export.default.sql.query}
+escidoc.search.and.export.indexes.explain.query=${escidoc.search.and.export.indexes.explain.query}
+escidoc.search.and.export.default.sort.keys=${escidoc.search.and.export.default.sort.keys}
+escidoc.search.and.export.default.sort.order=${escidoc.search.and.export.default.sort.order}
+escidoc.search.and.export.start.record=${escidoc.search.and.export.start.record}
+escidoc.search.and.export.maximum.records=${escidoc.search.and.export.maximum.records}
