--- a/common_services/transformation/src/main/resources/transformation.properties
+++ b/common_services/transformation/src/main/resources/transformation.properties
@@ -5,7 +5,8 @@ escidoc.framework_access.content-model.id.publication=${escidoc.framework_access
 # CoNE service URL
 escidoc.cone.service.url=${escidoc.cone.service.url}
 
-# Stylesheet locations
-
+# Transformation stylesheets
+escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
+escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
