--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -235,7 +235,7 @@ escidoc.pidcache.user.password=${escidoc.pidcache.user.password}
 escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.content.url.prefix}
 
 # Transformation stylesheets
-escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet}
+escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
