New snapshot versions
Former-commit-id: 21bbe8ad841aeb1e1a4072b0c9775aeb91955df7

--- a/pubman/pubman_installer/pom.xml
+++ b/pubman/pubman_installer/pom.xml
@@ -224,13 +224,13 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>validation_presentation</artifactId>
-			<version>1.0.54</version>
+			<version>1.0.55-SNAPSHOT</version>
 			<type>war</type>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>framework_access</artifactId>
-			<version>1.0.51</version>
+			<version>1.0.52-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
@@ -253,13 +253,13 @@
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>cone</artifactId>
-			<version>1.2.7</version>
+			<version>1.2.8-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
 			<groupId>de.mpg.escidoc.services</groupId>
 			<artifactId>common_logic</artifactId>
-			<version>1.1.48</version>
+			<version>1.1.49-SNAPSHOT</version>
 			<scope>compile</scope>
 		</dependency>
 	
