Former-commit-id: e6cfdaec6d67e98700b32872178fe0ee0087599c

--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -46,6 +46,9 @@ escidoc.pubman.instance.context.path=${escidoc.pubman.instance.context.path}
 escidoc.pubman.item.pattern=${escidoc.pubman.item.pattern}
 escidoc.pubman.component.pattern=${escidoc.pubman.component.pattern}
 
+# URL for stylesheets in common-presentation
+escidoc.pubman.common.presentation.url=${escidoc.pubman.common.presentation.url}
+
 # Links from PubMan menu
 escidoc.pubman.policy.url=${escidoc.pubman.policy.url}
 escidoc.pubman.contact.url=${escidoc.pubman.contact.url}
