--- a/common_services/citationmanager/src/test/resources/CitationStyles/APA/test.properties
+++ b/common_services/citationmanager/src/test/resources/CitationStyles/APA/test.properties
@@ -1,5 +1,6 @@
 # Plain tests
 plain.test.xml=CitationStyleTestCollection.xml
+#plain.test.xml=full_item.xml
 
 # Substantial test
 substantial.skip.test=false
