--- a/pubman/pubman_ear/src/main/resources/pubman.properties
+++ b/pubman/pubman_ear/src/main/resources/pubman.properties
@@ -241,6 +241,7 @@ escidoc.transformation.mab.content.url.prefix=${escidoc.transformation.mab.conte
 escidoc.transformation.edoc.stylesheet.filename=${escidoc.transformation.edoc.stylesheet.filename}
 escidoc.transformation.endnote.ice.stylesheet.filename=${escidoc.transformation.endnote.ice.stylesheet.filename}
 escidoc.transformation.endnote.stylesheet.filename=${escidoc.transformation.endnote.stylesheet.filename}
+escidoc.transformation.edoc.configuration.filename=${escidoc.transformation.edoc.configuration.filename}
 escidoc.transformation.mab.stylesheet.filename=${escidoc.transformation.mab.stylesheet.filename}
 
 escidoc.pubman.genres.configuration=${escidoc.pubman.genres.configuration}
